--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<scope>provided</scope>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-util</artifactId>
+			<version>7.0.55</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
